--- a/src/Components/RecordsPage/Figures.css
+++ b/src/Components/RecordsPage/Figures.css
@@ -35,7 +35,7 @@
 /* tools section */
 .tools {
     padding: 4rem 0;
-    background: rgb(219, 122, 37);
+    background: #bb6868;
 }
 
 .section-title h2 {
