--- a/src/Components/HomePage/Background.css
+++ b/src/Components/HomePage/Background.css
@@ -1,21 +1,26 @@
-.hero {
+.home-container {
     height: 100vh;
     width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        /* background-image: url(../../assets/white-pattern.png); */
+        background-size: contain;
 }
 
-#back-image {
+/* #back-image {
     position: fixed;
     background-size: cover;
     width: 100%;
     height: 100%;
     z-index: 1;
-}
+} */
 
 .content {
     z-index: 2;
 }
 
-.hero .content {
+.home-container .content {
     text-align: center;
     position: absolute;
     margin: auto;
@@ -24,22 +29,24 @@
     top: 40vh;
 }
 
-.hero .content h1 {
+.home-container .content h1 {
     font-size: 4rem;
-    color: #fff;
+    color: black;
 }
 
-.hero p {
+.home-container p {
     font-size: 1.8rem;
     font-weight: 400;
     margin-bottom: 1.6rem;
-    color: #fff;
+    color: black;
+    padding: 0 70px;
 }
 
 .search-area {
     display: flex;
     width: 500px;
     margin: auto;
+    margin-bottom: 2rem;
     justify-content: space-between;
 
 }
@@ -47,9 +54,9 @@
 .search-area input {
     width: 300px;
     background-color: transparent;
-    color: white;
+    color: black;
     font-weight: 200;
-    border: solid 1px white;
+    border: solid 1px black;
 }
 
 @media screen and (max-width: 640px) {
@@ -61,4 +68,12 @@
         font-size: 1.4rem;
         margin-bottom: 1.6rem;
     }
+}
+
+.toolhub-blue {
+    color: #006699;
+}
+
+.toolhub-red {
+    color: #990000;
 }
