--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -7,6 +7,7 @@
     align-items: center;
     padding: 1rem;
     z-index: 10;
+    background: #3366CC;
 }
 
 .logo {
@@ -25,6 +26,7 @@
 .nav-menu a {
     font-size: 1.2rem;
     font-weight: 500;
+    color: white;
 }
 
 .hamburger {
