--- a/src/Components/ErrorPage/Error.css
+++ b/src/Components/ErrorPage/Error.css
@@ -1,6 +1,6 @@
 .hero {
     height: 100vh;
-    background: url("../../assets/tool.jpg") center/cover no-repeat;
+    background: rgba(236, 236, 236);
     display: flex;
     align-items: center;
     justify-content: center;
