--- a/src/Components/RecordsPage/RecordForm.css
+++ b/src/Components/RecordsPage/RecordForm.css
@@ -1,6 +1,6 @@
 .new-record {
-  height: 100vh;
-  background: url("../../assets/laptop.jpg") center/cover no-repeat;
+  height: 100%;
+  background: rgb(236, 236, 236);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,8 +14,9 @@
   text-transform: capitalize;
   color: white;
   letter-spacing: 0.5rem;
-  height: 90%;
+  height: 70%;
   width: 40%;
+  margin-top: 6rem;
 }
 
 .submit-btn {
