--- a/src/Pages/Records/Hero.css
+++ b/src/Pages/Records/Hero.css
@@ -1,6 +1,6 @@
 .tool-hero {
     min-height: 60vh;
-    background: url("../../assets/laptop.jpg") center/cover no-repeat;
+    background: rgb(236, 236, 236);
     display: flex;
     align-items: center;
     justify-content: center;
