--- a/src/Pages/ToolItem.css
+++ b/src/Pages/ToolItem.css
@@ -9,7 +9,7 @@
 
 .item-container {
   text-align: center;
-  background: rgba(0, 0, 0, 0.8);
+  background: #fff;
   display: inline-block;
   padding: 2rem;
   min-height: 260px;
@@ -20,28 +20,9 @@
   margin-top: 0.7rem;
   letter-spacing: var(--mainSpacing);
   text-align: center;
-  font-weight: 200;
-}
-
-.title {
   font-weight: 500;
 }
 
-.buttons {
-  margin: 20px auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 20vw;
-  height: 100px;
+.title {
+  font-weight: 700;
 }
-
-/* .btn {
-  padding: 12px 32px;
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  /* background: #fff; */
-  /* color: #fff;
-  border: 1px solid #fff;
-  cursor: pointer;
-} */ 
